wrong margintop fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2442,7 +2442,7 @@ section {
         font-size: 23px !important;
         font-weight: 700;
         line-height: 1.1;
-        margin-top: 23px;
+        margin-top: 15px;
     }
 
     .treatment-item img {
